# RoboLib

./: CMakeLists.txt  README.md  config.json
.github/workflows/: manual-release.yml  pr-build.yml
apps/AppFoo/: CMakeLists.txt
apps/AppFoo/include/: AppFoo.hpp
apps/AppFoo/src/: AppFoo.cpp
apps/AppManager/: CMakeLists.txt
apps/AppManager/include/: AppManager.hpp
apps/AppManager/src/: AppManager.cpp
components/ComponentA/: CMakeLists.txt
components/ComponentA/include/: ComponentA.hpp
components/ComponentA/src/: ComponentA.cpp
components/ComponentB/: CMakeLists.txt
configs/: example.json
include/robotlib/: base_component.h  component.h  config_loader.h  controller.h  data_packet.h  database_client.h  database_component.h  database_server.h  db_component.h  db_motor.h  db_touch_sensor.h  motor.h  redis.h  redis_component.h  scheduler.h  tcp_client.h  tcp_server.h  touch_sensor.h
lib/: CMakeLists.txt
lib/components/: Component.cpp  Component.h  DatabaseComponent.cpp  DatabaseComponent.h  MainComponent.cpp  MainComponent.h  MotorComponent.cpp  MotorComponent.h  SchedulerComponent.cpp  SchedulerComponent.h
lib/include/: App.hpp  shared.hpp
lib/networking/: DatabaseClient.cpp  DatabaseClient.h
lib/src/: App.cpp  shared.cpp
scripts/: build.sh  db_control.sh  run.sh  run_database.sh  run_dbmotor1.sh  run_dbmotor2.sh  run_dbsensor.sh  run_main.sh  run_motor1.sh  run_motor2.sh  run_scheduler.sh  run_sensor.sh
sim/: SimComponent.cpp
sim/hooks/: GenericHook.h  MotorHook.h  TouchSensorHook.h
src/: Main.cpp  component.cpp  config_loader.cpp  controller.cpp  data_packet.cpp  database_client.cpp  database_component.cpp  database_server.cpp  db_component.cpp  db_motor.cpp  db_touch_sensor.cpp  main.cpp  motor.cpp  motor_main.cpp  redis.cpp  redis_component.cpp  scheduler.cpp  tcp_client.cpp  tcp_server.cpp  touch_sensor.cpp  touch_sensor_main.cpp
